cmake_minimum_required(VERSION 3.9)

project(handycp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++14")
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(GNUInstallDirs)

# SRC
set(BINARY ${CMAKE_PROJECT_NAME})
file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true src/*.h src/*.cpp)
set(SOURCES ${SOURCES})
add_library(${BINARY} SHARED
    ${SOURCES}
)

# TESTS (NOT IMPLEMENTED YET)
#set(BINARY ${CMAKE_PROJECT_NAME}_test)
#file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false tests/*.h tests/*.cpp)
#set(SOURCES ${TEST_SOURCES})
#add_executable(${BINARY} ${TEST_SOURCES})
#add_test(NAME ${BINARY} COMMAND ${BINARY})
#target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest)

# INSTALLATION
set_target_properties(${PROJECT_NAME} 
    PROPERTIES PUBLIC_HEADER
    VERSION  ${PROJECT_VERSION} 
    SOVERSION 1 
    PUBLIC_HEADER include/handycp.h)

configure_file(handycp.pc.in handycp.pc @ONLY)

install(TARGETS ${PROJECT_NAME} 
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} 
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(FILES ${CMAKE_BINARY_DIR}/handycp.pc 
    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig
)
